# Mashup-Bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  rave.rs  youtube.rs
