[package]
name = "mashupbot"
version = "0.1.0"
authors = ["gabriel.a <arrudagates@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.14.2"
reqwest = { version = "0.10.9", features = ["json"] }
youtube_dl = "0.6.0"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
google-youtube3 = "*"
hyper-native-tls = "0.3"
json = "*"
rand = "0.7"

[dependencies.tokio]
version = "0.2.22"
features = ["macros", "time"]
